fixed letter spacing on <small> elements

--- a/spa/style.css
+++ b/spa/style.css
@@ -30,6 +30,7 @@ h5,
 h6,
 p,
 a,
+small,
 button,
 select,
 input {
